# dstbundesliga

./: .env_example  .flake8  .gitignore  Ligaübersicht.csv  Ligenübersicht.csv  README.md  leagues.csv  local_settings_example.py  manage.py  pyproject.toml  requirements.txt  update.sh
DSTBundesliga/: asgi.py  settings.py  urls.py  views.py  wsgi.py
DSTBundesliga/apps/dstffbl/: admin.py  forms.py  models.py  urls.py  views.py
DSTBundesliga/apps/dstffbl/migrations/: 0001_initial.py  0002_auto_20210501_1937.py  0003_auto_20210501_1939.py  0004_seasonuser_possible_commish.py  0005_seasonuser_registration_ts.py  0006_seasonuser_last_years_league.py  0007_seasonuser_dst_player.py  0008_auto_20210725_0938.py  0009_auto_20210725_1424.py  0010_seasoninvitation.py  0011_auto_20220720_1852.py  0012_seasonregistration_send_ts.py  0013_auto_20220724_1311.py  0014_dstemail.py  0015_dstemail_type.py  0016_auto_20220724_1336.py  0017_auto_20220727_2036.py  0018_auto_20230730_1959.py  (+1 more)
DSTBundesliga/apps/leagues/: admin.py  cms_menus.py  config.py  models.py  rss_service.py  services.py  tables.py  urls.py  views.py
DSTBundesliga/apps/services/: awards_service.py  data_services.py  patreon_service.py  rss_service.py  season_service.py  state_service.py
static/DSTBundesliga/: base.css
staticfiles/DSTBundesliga/: base.css
staticfiles/css/: base.css  semanticui_2_3_0_min.css
staticfiles/scripts/: jquery_3_1_0_min.js  semanticui_2_3_0_min.js
templates/: base.html  home.html  menu.html
templates/cookielaw/: banner.html
templates/registration/: login.html
(+118 files in other folders)
